# cargo-bin

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
misc/: test-cargo.toml
src/: manifest.rs  project.rs
