[package]
name = "cargo-bin"
version = "0.2.0"
authors = ["gensmusic <gensmusic@163.com>"]
edition = "2018"
license = "MIT"
description = "help to manage all binares in Cargo.toml"

documentation = "https://github.com/gensmusic/cargo-bin/blob/master/README.md"
homepage = "https://github.com/gensmusic/cargo-bin"
repository = "https://github.com/gensmusic/cargo-bin"
readme = "README.md"

keywords = [
    "cargo",
    "cargo-subcommand",
    "cli",
]
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
]
[[bin]]
name = "cargo-bin"
path = "src/bin/bin.rs"

[dependencies]
toml_edit = "0.2.0"
anyhow = "1.0.32"
syn = {version = "1.0", features= ["full"]}
structopt = "0.3.16"
